--- a/client/src/app/site/assignments/modules/assignment-poll/components/assignment-poll-vote/assignment-poll-vote.component.html
+++ b/client/src/app/site/assignments/modules/assignment-poll/components/assignment-poll-vote/assignment-poll-vote.component.html
@@ -33,7 +33,7 @@
             <b> {{ getVotesAvailable(delegation) }}/{{ poll.max_votes_amount }} </b>
 
             <span *ngIf="poll.min_votes_amount > 1">
-                ({{ 'At least' | translate }} <b>{{ poll.min_votes_amount }}</b
+                ({{ 'at least' | translate }} <b>{{ poll.min_votes_amount }}</b
                 >)
             </span>
         </h4>
