--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -462,6 +462,10 @@ button.mat-menu-item.selected {
     margin-bottom: 60px !important;
 }
 
+.spacer-bottom-340 {
+    margin-bottom: 340px !important;
+}
+
 .spacer-left-10 {
     margin-left: 10px;
 }
