Add electron app and build environment
- Add electon packages
- Add electron-main.js as hook
- Add electron-main.ts config file
  - will automatically be compiled to .js
- Add electron-builder to create packages
- Add electron-builder.json for a maintainable build config
- Heavily optimize builder for angular projects
- Add build instructions to development.rst
- converts OpenSlides as optional electron application
- server switcher on the start page
  - enter some URL, makes it more pretty automatically
  - if the URL changed, reboot and OpenSlides and recall login info
    so the theme should directly apprear on the startpage
- always open links in new tabs
- resolve some django cookie problems to send valid requests as third
  party application
- Custom electron menu elements
  - Most importantly, "force reload" will wipe the local storrage
- Safe the last used server in indexDB
  - this was necessary to have reloading work
  - re-opening the application will enter the last used server for us
    (but no automatic login)
- "help" menu will forward to openslides.com and create issues
- use OpenSlides default theme if no other was found durgin login
  - no more white login page ever
- map file lookup to URL to call mediafiles and projector
- communicate between angular and electron using IPC

BUGS:
 - custom logo does not yet show

TODO:
 - dynamic updates of OpenSlides in Electron
 - dynamic updates of Electron itself

--- a/client/src/app/site/login/components/login-mask/login-mask.component.html
+++ b/client/src/app/site/login/components/login-mask/login-mask.component.html
@@ -1,9 +1,21 @@
 <div class="form-wrapper">
-
     <!-- Install notice -->
     <div class="login-container" *ngIf="installationNotice">
-        <mat-card [innerHTML]="(installationNotice) | translate"></mat-card>
+        <mat-card [innerHTML]="installationNotice | translate"></mat-card>
     </div>
+
+    <!-- select-server form -->
+    <form [formGroup]="serverSelectForm" class="login-container" *ngIf="isElectronApp">
+        <mat-form-field>
+            <input
+                matInput
+                osAutofocus
+                required
+                placeholder="{{ 'OpenSlides Server URL' | translate }}"
+                formControlName="backendUrl"
+            />
+        </mat-form-field>
+    </form>
 
     <!-- login form -->
     <form [formGroup]="loginForm" class="login-container" (ngSubmit)="formLogin('default')">
@@ -27,14 +39,16 @@
                 [type]="!hide ? 'password' : 'text'"
                 [errorStateMatcher]="parentErrorStateMatcher"
             />
-            <mat-icon color="primary" matSuffix (click)="hide = !hide">{{ hide ? 'visibility_off' : 'visibility_on' }}</mat-icon>
+            <mat-icon color="primary" matSuffix (click)="hide = !hide">{{
+                hide ? 'visibility_off' : 'visibility_on'
+            }}</mat-icon>
 
             <mat-error>{{ loginErrorMsg | translate }}</mat-error>
         </mat-form-field>
 
         <!-- forgot password button -->
         <br />
-        <button mat-button color="primary" type="button" class="forgot-password-button" (click)="resetPassword()" >
+        <button mat-button color="primary" type="button" class="forgot-password-button" (click)="resetPassword()">
             {{ 'Forgot Password?' | translate }}
         </button>
 
@@ -42,13 +56,7 @@
         <br />
         <!-- TODO: Next to each other...-->
         <button mat-raised-button color="primary" class="login-button" type="submit">{{ 'Login' | translate }}</button>
-        <button
-            mat-stroked-button
-            *ngIf="areGuestsEnabled()"
-            class="login-button"
-            type="button"
-            (click)="guestLogin()"
-        >
+        <button mat-stroked-button *ngIf="areGuestsEnabled()" class="login-button" type="button" (click)="guestLogin()">
             {{ 'Login as guest' | translate }}
         </button>
         <a
