--- a/client/src/app/site/chat/components/chat-message/chat-message.component.html
+++ b/client/src/app/site/chat/components/chat-message/chat-message.component.html
@@ -4,8 +4,12 @@
     </div>
     <div
         class="chat-text"
-        [ngClass]="{ 'background-primary': !isOwnMessage, 'background-primary-darkest': isOwnMessage }"
-        [matMenuTriggerFor]="canDelete ? singleChatMenu : null"
+        [ngClass]="{
+            disabled: !canDelete,
+            'background-primary': !isOwnMessage,
+            'background-primary-darkest': isOwnMessage
+        }"
+        [matMenuTriggerFor]="singleChatMenu"
     >
         {{ text }}
         <div class="timestamp">{{ date | localizedDate }}</div>
