--- a/client/src/assets/styles/motion-styles-common.scss
+++ b/client/src/assets/styles/motion-styles-common.scss
@@ -36,6 +36,7 @@
             height: 22px;
             position: absolute;
             left: 0;
+            margin-left: 3px;
             padding-right: 55px;
 
             &:after {
